@startuml
    class User {
        + id: int
        + name: string
        + email: string
    }

    class Product {
        + id: int
        + name: string
        + sku: string
        + price: float
    }

    class OrderItem {
        + id: int
        + order_id: int
        + product_id: int
        + quantity: int
        + unit_price: float
    }

    class Order {
        + id: int
        + user_id: int
        + total_amount: float
    }

    class WriteOrder {
        + insert_order(Order) : int
        + delete_order(int) : int
        + insert_order_to_redis(Order) : void
        + delete_order_from_redis(int) : void
    }

    class ReadOrder {
        + get_order_by_id(int) : Order
        + get_highest_spending_users() : JSONArray
        + get_best_selling_products() : JSONArray
    }

    class OrderController {
        + create_order(RequestBody) : JSONObject
        + delete_order(int) : JSONObject
        + get_order(int) : Order
    }

    OrderItem <-- Order
    User --> Order
    Product --> OrderItem
    WriteOrder --> Order
    WriteOrder --> OrderItem
    WriteOrder --> Product
    OrderController --> WriteOrder
    OrderController --> ReadOrder
@enduml
